@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.quickfixj</groupId>
         <artifactId>quickfixj-parent</artifactId>
-        <version>2.2.1-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>quickfixj-core</artifactId>
@@ -61,8 +61,8 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.10.19</version>
+            <artifactId>mockito-core</artifactId>
+            <version>3.12.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -93,7 +93,7 @@
         <dependency>
             <groupId>org.apache.mina</groupId>
             <artifactId>mina-core</artifactId>
-            <version>2.1.4</version>
+            <version>2.1.5</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -146,9 +146,9 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>berkeleydb</groupId>
+            <groupId>com.sleepycat</groupId>
             <artifactId>je</artifactId>
-            <version>2.1.30</version>
+            <version>18.3.12</version>
             <optional>true</optional>
         </dependency>
     </dependencies>
@@ -442,29 +442,6 @@
                     </instructions>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>-Xmx512m -Djava.net.preferIPv4Stack=true</argLine>
-                    <trimStackTrace>false</trimStackTrace>
-                    <includes>
-                        <include>**/*Test.java</include>
-                        <include>${acceptance.tests}</include>
-                    </includes>
-                    <excludes>
-                        <exclude>**/*ForTest.java</exclude>
-                        <exclude>**/Abstract*Test.java</exclude>
-                        <exclude>**/AcceptanceTestSuite$*</exclude>
-                    </excludes>
-                    <systemPropertyVariables>
-                        <atest.heartbeat>5</atest.heartbeat>
-                        <atest.timeout>60000</atest.timeout>
-                        <atest.reconnectDelay>5</atest.reconnectDelay>
-                        <atest.skipslow>false</atest.skipslow>
-                    </systemPropertyVariables>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
@@ -499,5 +476,78 @@
                 <acceptance.tests />
             </properties>
         </profile>
+        <!-- select different java options on JDK8 for surefire since otherwise the build will fail -->
+        <profile>
+            <id>surefire-java8</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>
+                                -Xmx512m -Djava.net.preferIPv4Stack=true
+                            </argLine>
+                            <trimStackTrace>false</trimStackTrace>
+                            <includes>
+                                <include>**/*Test.java</include>
+                                <include>${acceptance.tests}</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/*ForTest.java</exclude>
+                                <exclude>**/Abstract*Test.java</exclude>
+                                <exclude>**/AcceptanceTestSuite$*</exclude>
+                            </excludes>
+                            <systemPropertyVariables>
+                                <atest.heartbeat>5</atest.heartbeat>
+                                <atest.timeout>60000</atest.timeout>
+                                <atest.reconnectDelay>5</atest.reconnectDelay>
+                                <atest.skipslow>false</atest.skipslow>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile> 
+        <!-- surefire for JDK9 and upwards -->
+        <profile>
+            <id>surefire</id>
+            <activation>
+                <jdk>[1.9,)</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>
+                                -Xmx512m -Djava.net.preferIPv4Stack=true
+                                --add-opens java.base/java.lang=ALL-UNNAMED
+                            </argLine>
+                            <trimStackTrace>false</trimStackTrace>
+                            <includes>
+                                <include>**/*Test.java</include>
+                                <include>${acceptance.tests}</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/*ForTest.java</exclude>
+                                <exclude>**/Abstract*Test.java</exclude>
+                                <exclude>**/AcceptanceTestSuite$*</exclude>
+                            </excludes>
+                            <systemPropertyVariables>
+                                <atest.heartbeat>5</atest.heartbeat>
+                                <atest.timeout>60000</atest.timeout>
+                                <atest.reconnectDelay>5</atest.reconnectDelay>
+                                <atest.skipslow>false</atest.skipslow>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile> 
     </profiles>
 </project>
